[package]
name = "iifrontend"
version = "0.1.0"
edition = "2021"
description = ""
documentation = "https://docs.rs/iifrontend"
readme = "README.md"
repository = "https://github.com/shtsoft/ii-rs"
license = "GPL-3.0-or-later"
keywords = []
categories = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.21.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
